# SquiRtL

./: .gitignore  LICENSE.md  PokemonBlue.gb.ram  README.md  pyproject.toml  to-do.md
Classes/: Agent.py  BPCA.py  DQN.py  DQNAgent.py  Emulator.py  Experience.py  Frames.py  Gymnasium.py  Gymnasium_Old.py  Hyperparameters.py  Logging.py  MetricLogger.py  Metrics.py  Orchestrator.py  PPOAgent.py  Reward.py  Settings.py  test_pca.py
Classes/BPCA/: BPCA.cpp  CythonBPCA.cpp  CythonBPCA.pyx  POC.cpp  __init__.py  setup.py
Classes/CPP/: POC.cpp
Classes/PCA/: PCA.cpp
Classes/TSP/: TSP  TSP.cpp
Emulator/: gym.py
data/metrics/: metrics.json
