[tool.poetry]
authors      = ["James Parkington <pongs.acreage.0o@icloud.com>"]
description  = "Aims to explore and implement various algorithms within a game environment, specifically focusing on Pokémon Blue pathfinding and optimal early gameplay."
license      = "LICENSE.md"
name         = "squirtl"
package-mode = false
readme       = "README.md"
version      = "0.1.0"

[tool.poetry.dependencies]
python = "^3.12"

matplotlib    = "*"
numpy         = "1.26.4"
opencv-python = "*"
pyboy         = "*"
seaborn       = "*"
statsmodels   = "*"
torch         = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]
